--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "angular": "^1.8.2"
+    "angular": "^1.8.2",
+    "angular-mocks": "^1.8.2",
+    "angular-route": "^1.8.2",
+    "prettify": "^0.1.7"
   }
 }
